--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+android-sdk-installer (0.2) precise; urgency=low
+
+  * eclipse-adt-plugin binary package moved to eclipse-jee-installer
+
+ -- Luis Antonio Garcia Gisbert <luisgg@gmail.com>  Wed, 28 Aug 2013 17:36:56 +0200
+
 android-sdk-installer (0.1) precise; urgency=low
 
   * Initial release.
