--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+android-sdk-installer (22.0.5+20130729+aurex1) precise; urgency=low
+
+  * Use yad for user feedback
+
+ -- Luis Antonio Garcia Gisbert <luisgg@gmail.com>  Mon, 09 Sep 2013 17:16:39 +0200
+
 android-sdk-installer (22.0.5+20130729) precise; urgency=low
 
   * New version number schema
